# pyFlightGoggles

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt  run_docker.sh  setup.cfg  setup.py
apps/: debug_env.py  example_log.csv  log2video.py
config/: FlightGogglesClient.yaml  FlightGogglesClient_debug_env.yaml  FlightGogglesClient_demo_car.yaml  FlightGogglesClient_demo_moving_objects.yaml  FlightGogglesClient_demo_multi_agents.yaml  FlightGogglesClient_demo_multi_machine.yaml  FlightGogglesClient_demo_multi_machines.yaml  FlightGogglesClient_demo_uav.yaml  FlightGogglesClient_demo_uav_debug.yaml  carDynamicsSim.yaml  multicopterDynamicsSim.yaml  waypointController.yaml
flightgoggles/: controller.py  env.py  filter.py  model.py  utils.py
libs/FlightGogglesClient/: CMakeLists.txt  FlightGogglesClient.cpp  FlightGogglesClient.hpp  moduleFlightGogglesClient.cpp  pyFlightGogglesClient.cpp  pyFlightGogglesClient.hpp
notebooks/: demo.ipynb  demo_car.ipynb  demo_moving_objects.ipynb  demo_multi_agents.ipynb  demo_multi_machine.ipynb  demo_multi_machines.ipynb  demo_uav.ipynb  demo_uav_debug.ipynb
